// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App create 1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 ibAxtK"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dTDiiP"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 tyvdt"
      >
        <header
          class="StyledBox-sc-13pk1d4-0 cgqbGo"
        >
          <div
            class="StyledGrid-sc-1wofa1l-0 jHvOrk"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 dmwscg"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 jjYYYh"
            >
              <h1
                class="StyledHeading-sc-1rdh4aw-0 fDsero"
              >
                grommet designer
              </h1>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 gPyqQd"
            >
              <p
                class="StyledParagraph-sc-tbetod-0 fWEQTW"
              >
                design with grommet components
              </p>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 hSwKTS"
            >
              <a
                class="StyledButton-sc-323bzc-0 hlREwS"
                href="/_new"
                title="start a new design"
              >
                New
              </a>
            </div>
          </div>
        </header>
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 jCIPgj"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 iipmF"
      >
        <span
          class="StyledText-sc-1sadyjn-0 guFAep"
        >
          Hi, ... maybe create a new design?
        </span>
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 jCIPgj"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 tyvdt"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 jIpjvY FileInput__ContentsBox-sc-1jzq7im-0 eGoRlP"
        >
          <input
            accept=".json"
            class="StyledFileInput-sc-rl7ywv-0 ODPbl"
            type="file"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 jjjmBR"
          >
            <span
              class="StyledText-sc-1sadyjn-0 kmcskI FileInput__Message-sc-1jzq7im-2 glCmAt"
            >
              Import - drop design file here
            </span>
            <a
              class="StyledAnchor-sc-1rp7lwl-0 kdekNd"
              tabindex="-1"
            >
              browse
            </a>
          </div>
        </div>
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 jCIPgj"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 jVyrAf"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 tyvdt"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 dzPhOY"
          >
            <h2
              class="StyledHeading-sc-1rdh4aw-0 fxdCwp"
            >
              storage
            </h2>
            <div
              class="StyledBox__StyledBoxGap-sc-13pk1d4-1 djXwyE"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 gjRWJG"
            >
              <svg
                aria-label="Bar meter with values 0, 0, 0, 0, 0, 0, 0 out of 100"
                class="StyledMeter-sc-nsxarx-0 ljQwMP"
                height="24"
                preserveAspectRatio="none"
                viewBox="0 0 384 24"
                width="384"
              >
                <path
                  d="M 0,12 L 384,12"
                  fill="none"
                  stroke="#F2F2F2"
                  stroke-linecap="square"
                  stroke-opacity="0.4"
                  stroke-width="24"
                />
              </svg>
              <div
                class="StyledBox__StyledBoxGap-sc-13pk1d4-1 dcrjBY"
              />
              <span
                class="StyledText-sc-1sadyjn-0 gtTACv"
              >
                0 K total
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 jCIPgj"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 tyvdt"
      >
        <footer
          class="StyledBox-sc-13pk1d4-0 gfXvoZ"
        >
          <button
            aria-label="Change settings"
            class="StyledButton-sc-323bzc-0 bPtrUO"
            type="button"
          >
            <svg
              aria-label="Brush"
              class="StyledIcon-sc-ofa7kd-0 dUXZZZ"
              viewBox="0 0 24 24"
            >
              <path
                d="M9.312 11.73a5.001 5.001 0 0 0-5.362 1.12c-1.953 1.952-1.414 8.485-1.414 8.485s6.532.538 8.485-1.415a5.001 5.001 0 0 0 1.12-5.362L22.334 4.364a1.997 1.997 0 0 0 0-2.828 1.995 1.995 0 0 0-2.828 0L9.312 11.729zm1.002-1.617 1.838 1.838 1.697 1.697"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </button>
        </footer>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App create 2`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 ibAxtK"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dTDiiP"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 tyvdt"
      >
        <header
          class="StyledBox-sc-13pk1d4-0 laaCpe"
        >
          <div
            class="StyledGrid-sc-1wofa1l-0 jHvOrk"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 dmwscg"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 jjYYYh"
            >
              <h1
                class="StyledHeading-sc-1rdh4aw-0 fDsero"
              >
                new design
              </h1>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 gPyqQd"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 hSwKTS"
            >
              <button
                aria-label="cancel creating a new design"
                class="StyledButton-sc-323bzc-0 kZiUKa"
                type="button"
              >
                <svg
                  aria-label="Close"
                  class="StyledIcon-sc-ofa7kd-0 dUXZZZ"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="m3 3 18 18M3 21 21 3"
                    fill="none"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </button>
            </div>
          </div>
        </header>
        <form>
          <div
            class="StyledBox-sc-13pk1d4-0 ipOUDz FormField__FormFieldBox-sc-m9hood-0 ikMUUn"
          >
            <label
              class="StyledText-sc-1sadyjn-0 jJDdlU"
              for="name"
            >
              name
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 jkOlet FormField__FormFieldContentBox-sc-m9hood-1 dzFqzm"
            >
              <div
                class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 kihEXm"
              >
                <input
                  autocomplete="off"
                  class="StyledTextInput-sc-1x30a0s-0 kxxYKS"
                  id="name"
                  name="name"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 iOMvEi"
            id="startWith"
            role="radiogroup"
          >
            <label
              class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 ftLDvU"
              for="startWith-start with a blank design"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 ddRFYS StyledRadioButton-sc-g1f6ld-5 fkANBY"
              >
                <input
                  checked=""
                  class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 fmhjpE"
                  id="startWith-start with a blank design"
                  name="startWith"
                  tabindex="0"
                  type="radio"
                  value="start with a blank design"
                />
                <div
                  class="StyledBox-sc-13pk1d4-0 hDmKfM StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 jvGfNH"
                >
                  <svg
                    class="StyledRadioButton__StyledRadioButtonIcon-sc-g1f6ld-3 ccwzFW"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 24 24"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="6"
                    />
                  </svg>
                </div>
              </div>
              <span
                class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
              >
                start with a blank design
              </span>
            </label>
            <div
              class="StyledBox__StyledBoxGap-sc-13pk1d4-1 dcrjBY"
            />
            <label
              class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 ftLDvU"
              for="startWith-duplicate an existing design"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 ddRFYS StyledRadioButton-sc-g1f6ld-5 fkANBY"
              >
                <input
                  class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 fmhjpE"
                  id="startWith-duplicate an existing design"
                  name="startWith"
                  tabindex="-1"
                  type="radio"
                  value="duplicate an existing design"
                />
                <div
                  class="StyledBox-sc-13pk1d4-0 ekPCDg StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 jvGfNH"
                />
              </div>
              <span
                class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
              >
                duplicate an existing design
              </span>
            </label>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 ipOUDz FormField__FormFieldBox-sc-m9hood-0 ikMUUn"
          >
            <label
              class="StyledText-sc-1sadyjn-0 jJDdlU"
            >
              theme
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 itXtYk FormField__FormFieldContentBox-sc-m9hood-1"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 dKEdmq"
                role="radiogroup"
              >
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 ftLDvU"
                  for="grommet"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 ddRFYS StyledRadioButton-sc-g1f6ld-5 fkANBY"
                  >
                    <input
                      checked=""
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 fmhjpE"
                      id="grommet"
                      name="theme"
                      tabindex="0"
                      type="radio"
                      value="grommet"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 hDmKfM StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 jvGfNH"
                    >
                      <svg
                        class="StyledRadioButton__StyledRadioButtonIcon-sc-g1f6ld-3 ccwzFW"
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 24 24"
                      >
                        <circle
                          cx="12"
                          cy="12"
                          r="6"
                        />
                      </svg>
                    </div>
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    grommet
                  </span>
                </label>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 dcrjBY"
                />
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 ftLDvU"
                  for="hpe"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 ddRFYS StyledRadioButton-sc-g1f6ld-5 fkANBY"
                  >
                    <input
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 fmhjpE"
                      id="hpe"
                      name="theme"
                      tabindex="-1"
                      type="radio"
                      value="hpe"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 ekPCDg StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 jvGfNH"
                    />
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    hpe
                  </span>
                </label>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 dcrjBY"
                />
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 ftLDvU"
                  for="other"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 ddRFYS StyledRadioButton-sc-g1f6ld-5 fkANBY"
                  >
                    <input
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 fmhjpE"
                      id="other"
                      name="theme"
                      tabindex="-1"
                      type="radio"
                      value="other"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 ekPCDg StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 jvGfNH"
                    />
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    other
                  </span>
                </label>
              </div>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 ipOUDz FormField__FormFieldBox-sc-m9hood-0 ikMUUn"
          >
            <label
              class="StyledText-sc-1sadyjn-0 jJDdlU"
              for="includes"
            >
              include other designs to be able to copy their components
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 jkOlet FormField__FormFieldContentBox-sc-m9hood-1"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-label="none"
                class="StyledButton-sc-323bzc-0 cSQiaB StyledSelect__StyledSelectDropButton-sc-znp66n-5 sJbzt"
                type="button"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 bBjwuK"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 epBGQQ"
                  >
                    <div
                      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 kihEXm"
                    >
                      <input
                        autocomplete="off"
                        class="StyledTextInput-sc-1x30a0s-0 XAuSR StyledSelect__SelectTextInput-sc-znp66n-4 jCTbOT"
                        inert=""
                        name="includes"
                        placeholder="none"
                        readonly=""
                        tabindex="-1"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class="StyledBox-sc-13pk1d4-0 eLuJRp"
                    style="min-width: auto;"
                  >
                    <svg
                      aria-label="FormDown"
                      class="StyledIcon-sc-ofa7kd-0 iUsMgN"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="m18 9-6 6-6-6"
                        fill="none"
                        stroke="#000"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <footer
            class="StyledBox-sc-13pk1d4-0 erXsl"
          >
            <button
              class="StyledButton-sc-323bzc-0 hlREwS"
              title="create design"
              type="submit"
            >
              Create Design
            </button>
          </footer>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App create 3`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 ibAxtK"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 dTDiiP"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 tyvdt"
      >
        <header
          class="StyledBox-sc-13pk1d4-0 laaCpe"
        >
          <div
            class="StyledGrid-sc-1wofa1l-0 jHvOrk"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 dmwscg"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 jjYYYh"
            >
              <h1
                class="StyledHeading-sc-1rdh4aw-0 fDsero"
              >
                new design
              </h1>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 gPyqQd"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 hSwKTS"
            >
              <button
                aria-label="cancel creating a new design"
                class="StyledButton-sc-323bzc-0 kZiUKa"
                type="button"
              >
                <svg
                  aria-label="Close"
                  class="StyledIcon-sc-ofa7kd-0 dUXZZZ"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="m3 3 18 18M3 21 21 3"
                    fill="none"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </button>
            </div>
          </div>
        </header>
        <form>
          <div
            class="StyledBox-sc-13pk1d4-0 ipOUDz FormField__FormFieldBox-sc-m9hood-0 ikMUUn"
          >
            <label
              class="StyledText-sc-1sadyjn-0 jJDdlU"
              for="name"
            >
              name
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 jkOlet FormField__FormFieldContentBox-sc-m9hood-1 dzFqzm"
            >
              <div
                class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 kihEXm"
              >
                <input
                  autocomplete="off"
                  class="StyledTextInput-sc-1x30a0s-0 kxxYKS"
                  id="name"
                  name="name"
                  value="test design"
                />
              </div>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 iOMvEi"
            id="startWith"
            role="radiogroup"
          >
            <label
              class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 ftLDvU"
              for="startWith-start with a blank design"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 ddRFYS StyledRadioButton-sc-g1f6ld-5 fkANBY"
              >
                <input
                  checked=""
                  class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 fmhjpE"
                  id="startWith-start with a blank design"
                  name="startWith"
                  tabindex="0"
                  type="radio"
                  value="start with a blank design"
                />
                <div
                  class="StyledBox-sc-13pk1d4-0 hDmKfM StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 jvGfNH"
                >
                  <svg
                    class="StyledRadioButton__StyledRadioButtonIcon-sc-g1f6ld-3 ccwzFW"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 24 24"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="6"
                    />
                  </svg>
                </div>
              </div>
              <span
                class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
              >
                start with a blank design
              </span>
            </label>
            <div
              class="StyledBox__StyledBoxGap-sc-13pk1d4-1 dcrjBY"
            />
            <label
              class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 ftLDvU"
              for="startWith-duplicate an existing design"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 ddRFYS StyledRadioButton-sc-g1f6ld-5 fkANBY"
              >
                <input
                  class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 fmhjpE"
                  id="startWith-duplicate an existing design"
                  name="startWith"
                  tabindex="-1"
                  type="radio"
                  value="duplicate an existing design"
                />
                <div
                  class="StyledBox-sc-13pk1d4-0 ekPCDg StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 jvGfNH"
                />
              </div>
              <span
                class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
              >
                duplicate an existing design
              </span>
            </label>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 ipOUDz FormField__FormFieldBox-sc-m9hood-0 ikMUUn"
          >
            <label
              class="StyledText-sc-1sadyjn-0 jJDdlU"
            >
              theme
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 itXtYk FormField__FormFieldContentBox-sc-m9hood-1"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 dKEdmq"
                role="radiogroup"
              >
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 ftLDvU"
                  for="grommet"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 ddRFYS StyledRadioButton-sc-g1f6ld-5 fkANBY"
                  >
                    <input
                      checked=""
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 fmhjpE"
                      id="grommet"
                      name="theme"
                      tabindex="0"
                      type="radio"
                      value="grommet"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 hDmKfM StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 jvGfNH"
                    >
                      <svg
                        class="StyledRadioButton__StyledRadioButtonIcon-sc-g1f6ld-3 ccwzFW"
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 24 24"
                      >
                        <circle
                          cx="12"
                          cy="12"
                          r="6"
                        />
                      </svg>
                    </div>
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    grommet
                  </span>
                </label>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 dcrjBY"
                />
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 ftLDvU"
                  for="hpe"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 ddRFYS StyledRadioButton-sc-g1f6ld-5 fkANBY"
                  >
                    <input
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 fmhjpE"
                      id="hpe"
                      name="theme"
                      tabindex="-1"
                      type="radio"
                      value="hpe"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 ekPCDg StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 jvGfNH"
                    />
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    hpe
                  </span>
                </label>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 dcrjBY"
                />
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 ftLDvU"
                  for="other"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 ddRFYS StyledRadioButton-sc-g1f6ld-5 fkANBY"
                  >
                    <input
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 fmhjpE"
                      id="other"
                      name="theme"
                      tabindex="-1"
                      type="radio"
                      value="other"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 ekPCDg StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 jvGfNH"
                    />
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    other
                  </span>
                </label>
              </div>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 ipOUDz FormField__FormFieldBox-sc-m9hood-0 ikMUUn"
          >
            <label
              class="StyledText-sc-1sadyjn-0 jJDdlU"
              for="includes"
            >
              include other designs to be able to copy their components
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 jkOlet FormField__FormFieldContentBox-sc-m9hood-1"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-label="none"
                class="StyledButton-sc-323bzc-0 cSQiaB StyledSelect__StyledSelectDropButton-sc-znp66n-5 sJbzt"
                type="button"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 bBjwuK"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 epBGQQ"
                  >
                    <div
                      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 kihEXm"
                    >
                      <input
                        autocomplete="off"
                        class="StyledTextInput-sc-1x30a0s-0 XAuSR StyledSelect__SelectTextInput-sc-znp66n-4 jCTbOT"
                        inert=""
                        name="includes"
                        placeholder="none"
                        readonly=""
                        tabindex="-1"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class="StyledBox-sc-13pk1d4-0 eLuJRp"
                    style="min-width: auto;"
                  >
                    <svg
                      aria-label="FormDown"
                      class="StyledIcon-sc-ofa7kd-0 iUsMgN"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="m18 9-6 6-6-6"
                        fill="none"
                        stroke="#000"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <footer
            class="StyledBox-sc-13pk1d4-0 erXsl"
          >
            <button
              class="StyledButton-sc-323bzc-0 hlREwS"
              title="create design"
              type="submit"
            >
              Create Design
            </button>
          </footer>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App create 4`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 ibAxtK"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 eYfWMl"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jGTafO"
      >
        <form>
          <div
            class="StyledBox-sc-13pk1d4-0 ipOUDz FormField__FormFieldBox-sc-m9hood-0 ikMUUn"
          >
            <label
              class="StyledText-sc-1sadyjn-0 jJDdlU"
              for="template"
            >
              screen template
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 jkOlet FormField__FormFieldContentBox-sc-m9hood-1"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-label="Open Drop; Selected: empty page"
                class="StyledButton-sc-323bzc-0 cSQiaB StyledSelect__StyledSelectDropButton-sc-znp66n-5 sJbzt"
                id="template"
                type="button"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 bBjwuK"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 epBGQQ"
                  >
                    <div
                      class="StyledBox-sc-13pk1d4-0 ePdXuP"
                    >
                      <span
                        class="StyledText-sc-1sadyjn-0 cBGHqV"
                      >
                        empty page
                      </span>
                      <div
                        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 dcrjBY"
                      />
                      <span
                        class="StyledText-sc-1sadyjn-0 izvGuQ"
                      >
                        generic
                      </span>
                    </div>
                    <input
                      class="StyledSelect__HiddenInput-sc-znp66n-2 kSTztO"
                      id="template__input"
                      inert=""
                      name="template"
                      readonly=""
                      type="text"
                    />
                  </div>
                  <div
                    class="StyledBox-sc-13pk1d4-0 eLuJRp"
                    style="min-width: auto;"
                  >
                    <svg
                      aria-label="FormDown"
                      class="StyledIcon-sc-ofa7kd-0 iUsMgN"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="m18 9-6 6-6-6"
                        fill="none"
                        stroke="#000"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <footer
            class="StyledBox-sc-13pk1d4-0 bwQGpG"
          >
            <button
              class="StyledButton-sc-323bzc-0 hlREwS"
              title="Use selected screen template"
              type="submit"
            >
              Use Template
            </button>
          </footer>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App create 5`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 ibAxtK"
  >
    <div
      class="StyledGrommet-sc-19lkkz7-0 lgJYei"
      id="designer-canvas"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 ktzPgR"
        id="2"
        style="outline: 1px dashed red;"
        tabindex="-1"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 hkzlQZ"
          id="3"
          tabindex="-1"
        >
          <div
            class="sc-gyycJP idGnJA"
          >
            <p
              class="StyledParagraph-sc-tbetod-0 iDoCJZ"
            >
              This PageContent is currently empty. Add some content to it.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
